# score2gp

./: .gitignore  AGENTIC_ARCHITECTURE.md  AGENTS.md  HANDOFF.md  Makefile  PLAN.md  PRIVACY.md  README.md  REVIEW_RULES.md  TASKS.md  TESTING.md  debug_test.py  debug_test2.py  debug_test3.py  experiment.sh  fix_schema.py  gen_unconnected.py  grouping-diagnostics.html  patch_cli.py  pr_body.md  pyproject.toml  setup-score2gp-agent-workflow.sh  setup-score2gp-control-folder.sh  tuning_outside.tabraw.json  unboxed_recovery_debug.ir.json  unboxed_recovery_debug.tabraw.json  warnings.json
.antigravitycli/: 0cef821d-74a9-4c56-8e03-626eab63fd6a.json
agent-workflow/: README.md
docs/: agentops.md  architecture.md  diagnostics_failure_taxonomy.md  gpif-notes.md  input-requirements.md  intermediate-contracts.md  limitations.md  musicxml-tabraw-build-ir.md  partial-to-recovery.md  private-diagnostics.md  release-contract.md  scoreir-to-gpif-coverage.md  scoreir.md  setup.md  sidecar-workflow.md  timing-refinement-v1.0.md  unboxed-system-recovery.md  workflow.md
inspect/: inspect_pdf.json
reports/: task175_extraction_gap_report.md
schemas/: scoreir.v0.1.schema.json
scratch/: compare_detailed_hierarchy.py  compare_first_note.py  compare_gpif.py  compare_gpif_details.py  compare_gpif_structures.py  dump_tags.py  extracted_score.gpif  find_beam_tags.py  find_beat_xprops.py  find_break_tags.py  find_breaks.py  find_rest.py  generate_relational_comparisons.py  inspect_accent_values.py  inspect_articulations.py  inspect_bar_children.py  inspect_bar_properties.py  inspect_bars.py  (+40 more)
(+473 files in other folders)
